overflow fixed

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -43,13 +43,13 @@ align-items: center;
     text-align: left;
     border: 1px solid black;
     box-shadow: 5px 5px 3px rgba(0,0,0,0.9);
-    transform: translateY(20px);
+    transform: translateY(12px);
     transition: 0.5s;
     &:hover{
         background-color: rgba(176, 170, 192, 0.5);
         transform: translateY(0px);
         box-shadow: 10px 20px 3px rgba(0,0,0,0.9);
-
+      
     }  
 }
 .image{
